[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/BuyTower/BuyTower.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0.129412, 0.129412, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.384314, 0.337255, 0.2, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -140.0
margin_right = 141.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": "1"
}

[node name="GridContainer" type="GridContainer" parent="Panel"]
margin_left = 53.0
margin_top = 80.0
margin_right = 201.0
margin_bottom = 228.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Archers" type="TextureButton" parent="Panel/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Warriars" type="TextureButton" parent="Panel/GridContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="Magic" type="TextureButton" parent="Panel/GridContainer"]
margin_top = 84.0
margin_right = 64.0
margin_bottom = 148.0
texture_normal = ExtResource( 1 )

[node name="Artylary" type="TextureButton" parent="Panel/GridContainer"]
margin_left = 84.0
margin_top = 84.0
margin_right = 148.0
margin_bottom = 148.0
texture_normal = ExtResource( 1 )

[node name="Apility" type="TextureButton" parent="Panel"]
margin_left = 99.0
margin_top = 4.0
margin_right = 163.0
margin_bottom = 68.0
texture_normal = ExtResource( 1 )

[connection signal="pressed" from="Panel/GridContainer/Archers" to="." method="_on_Archers_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Warriars" to="." method="_on_Warriars_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Magic" to="." method="_on_Magic_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Artylary" to="." method="_on_Artylary_pressed"]
[connection signal="pressed" from="Panel/Apility" to="." method="_on_Apility_pressed"]
